--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,6 +8,7 @@ jobs:
     uses: canonical/operator-workflows/.github/workflows/test.yaml@main
     secrets: inherit
     with:
+      self-hosted-runner: false
       working-directory: ./squid-proxy-operator
   integration-tests:
     uses: canonical/operator-workflows/.github/workflows/integration_test.yaml@main
