--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,3 +10,14 @@ jobs:
     with:
       self-hosted-runner: true
       self-hosted-runner-label: "edge"
+  http-proxy-policy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4.2.2
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
+      - working-directory: ./http-proxy-policy
+        run: |
+          pip install -r requirements.txt
+          python3 ./manage.py test --settings=http_proxy_policy.test_settings
