--- a/squid-forward-proxy-operator/.woke.yaml
+++ b/squid-forward-proxy-operator/.woke.yaml
@@ -1,5 +1,6 @@
 # Copyright 2025 Canonical Ltd.
 # See LICENSE file for licensing details.
 
-ignore_files: []
+ignore_files:
   # Ignore apt charm library as it uses non compliant terminology:
+  - lib/charms/operator_libs_linux/v0/apt.py
