--- a/.github/workflows/publish_charm.yaml
+++ b/.github/workflows/publish_charm.yaml
@@ -8,7 +8,11 @@ on:
 
 jobs:
   publish-to-edge:
+    strategy:
+      matrix:
+        charm: [ squid-forward-proxy, http-proxy-policy ]
     uses: canonical/operator-workflows/.github/workflows/publish_charm.yaml@main
     secrets: inherit
     with:
       channel: latest/edge
+      identifier: ${{ matrix.charm }}
