--- a/http-proxy-policy/requirements.txt
+++ b/http-proxy-policy/requirements.txt
@@ -1,5 +1,6 @@
 django==5.1.7
 djangorestframework==3.15.2
+djangorestframework-simplejwt==5.5.0
 pydantic==2.10.6
 psycopg2-binary==2.9.10
 whitenoise==6.9.0
