--- a/http-proxy-policy/snap/snapcraft.yaml
+++ b/http-proxy-policy/snap/snapcraft.yaml
@@ -11,11 +11,11 @@ description: |
 confinement: strict
 platforms:
   amd64:
-    build-on: [amd64]
-    build-for: [amd64]
+    build-on: [ amd64 ]
+    build-for: [ amd64 ]
 
 system-usernames:
-  snap_daemon: shared
+  _daemon_: shared
 
 parts:
   service-files:
@@ -34,7 +34,7 @@ parts:
       ./venv/bin/pip install -r requirements.txt
       ./venv/bin/python3 manage.py collectstatic --noinput
       cp -r . $SNAPCRAFT_PART_INSTALL/app
-      chown -R 584788:584788 $SNAPCRAFT_PART_INSTALL/app
+      chown -R 584792:584792 $SNAPCRAFT_PART_INSTALL/app
   dependencies:
     plugin: nil
     source: .
@@ -53,12 +53,12 @@ apps:
   gunicorn:
     command: bin/gunicorn-start
     daemon: simple
-    plugs: [network, network-bind, home]
+    plugs: [ network, network-bind, home ]
   nginx:
     daemon: simple
     command: bin/nginx-start
-    plugs: [network, network-bind, home]
+    plugs: [ network, network-bind, home ]
     reload-command: bin/nginx-reload
   manage:
     command: bin/manage
-    plugs: [network, network-bind, home]
+    plugs: [ network, network-bind, home ]
