--- a/http-proxy-policy/snap/snapcraft.yaml
+++ b/http-proxy-policy/snap/snapcraft.yaml
@@ -32,7 +32,7 @@ parts:
     override-build: |
       python3 -m venv venv
       ./venv/bin/pip install -r requirements.txt
-      ./venv/bin/python3 manage.py collectstatic --noinput
+      DJANGO_SECRET_KEY=collectstatic ./venv/bin/python3 manage.py collectstatic --noinput
       cp -r . $SNAPCRAFT_PART_INSTALL/app
       chown -R 584792:584792 $SNAPCRAFT_PART_INSTALL/app
   dependencies:
