Create the http-proxy-policy Django application (#3)

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,12 +5,15 @@ on:
 
 jobs:
   unit-tests:
+    name: Charm Unit Tests
     uses: canonical/operator-workflows/.github/workflows/test.yaml@fix-inclusive-naming
     secrets: inherit
     with:
       self-hosted-runner: false
       working-directory: ./squid-forward-proxy-operator
+
   integration-tests:
+    name: Charm Integration Tests
     uses: canonical/operator-workflows/.github/workflows/integration_test.yaml@main
     secrets: inherit
     with:
@@ -18,3 +21,40 @@ jobs:
       provider: lxd
       working-directory: ./squid-forward-proxy-operator
       identifier: squid-forward-proxy
+
+  http-proxy-policy:
+    name: HTTP Proxy Policy Tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4.2.2
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
+      - working-directory: ./http-proxy-policy
+        run: |
+          pip install -r requirements.txt
+          python3 ./manage.py test --settings=http_proxy_policy.test_settings
+
+  build-snap:
+    name: Build Snap
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Change directory
+        run: |
+          TEMP_DIR=$(mktemp -d)
+          cp -rp ./http-proxy-policy/. $TEMP_DIR
+          rm -rf .* * || :
+          cp -rp $TEMP_DIR/. .
+          rm -rf $TEMP_DIR
+          ls -lah
+
+      - name: Build Snap
+        id: snapcraft-build
+        uses: snapcore/action-build@v1
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: charmed-http-proxy-policy-snap
+          path: "*.snap"
