--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -14,6 +14,7 @@ jobs:
       channel: latest/edge
       identifier: squid-forward-proxy
       working-directory: ./squid-forward-proxy-operator
+      integration-test-workflow-file: test.yaml
 
   publish-snap:
     runs-on: ubuntu-latest
