Use charmed-http-proxy-policy snap from the snap store

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -17,6 +17,7 @@ jobs:
       channel: latest/edge
       identifier: ${{ matrix.charm }}
       working-directory: './${{ matrix.charm }}-operator'
+      integration-test-workflow-file: test.yaml
 
   publish-snap:
     runs-on: ubuntu-latest
