Add COS integration to the Squid charm

--- a/squid-forward-proxy-operator/tox.ini
+++ b/squid-forward-proxy-operator/tox.ini
@@ -35,6 +35,7 @@ commands =
 description = Check code against coding style standards
 deps =
     black
+    cosl
     ruff
     codespell
     flake8
@@ -75,6 +76,7 @@ commands =
 [testenv:unit]
 description = Run unit tests
 deps =
+    cosl
     coverage[toml]
     ops[testing]
     pytest
