--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         charm: [squid-forward-proxy, http-proxy-policy]
-    uses: canonical/operator-workflows/.github/workflows/test.yaml@fix-inclusive-naming
+    uses: canonical/operator-workflows/.github/workflows/test.yaml@main
     secrets: inherit
     with:
       self-hosted-runner: false
