update targets for docs checks

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -9,4 +9,6 @@ jobs:
   docs-checks:
     uses: canonical/operator-workflows/.github/workflows/docs.yaml@main
     secrets: inherit
+    with:
+      vale-files: '["README.md", "http-proxy-policy/README.md", "http-proxy-policy-operator/README.md", "http-proxy-policy-operator/CONTRIBUTING.md", "squid-forward-proxy-operator/README.md", "squid-forward-proxy-operator/CONTRIBUTING.md"]'
 
