--- a/Makefile.docs
+++ b/Makefile.docs
@@ -7,7 +7,7 @@
 # Vale settings
 VALE_DIR ?= .vale
 PRAECEPTA_CONFIG 	?= .vale.ini
-DOCS_FILES 	?= docs/ README.md CONTRIBUTING.md
+DOCS_FILES 	?= README.md http-proxy-policy/README.md http-proxy-policy-operator/README.md http-proxy-policy-operator/CONTRIBUTING.md squid-forward-proxy-operator/README.md squid-forward-proxy-operator/CONTRIBUTING.md
 
 HAS_VALE			:= $(shell command -v vale;)
 HAS_LYCHEE			:= $(shell command -v lychee;)
