--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -8,6 +8,7 @@ on:
 jobs:
   docs-checks:
     uses: canonical/operator-workflows/.github/workflows/docs.yaml@main
+    runs-on: 'ubuntu-22.04'
     secrets: inherit
     with:
       vale-files: './**/*.md'
