--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -1,14 +1,61 @@
+# Copyright 2025 Canonical Ltd.
+# See LICENSE file for licensing details.
+
 name: Documentation
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
+    inputs:
+      vale-files:
+        type: string
+        description: Where Vale will look for files to lint
+        default: './**/*.md'
+        required: false
+      vale-fail-on-error:
+        description: Exit with 1 when at least one error was reported.
+        type: boolean
+        default: true
+        required: false
+      linkcheck-files:
+        type: string
+        description: Where Lychee will look for files to lint
+        default: "'./**/*.md' './**/*.rst'"
+        required: false
+      linkcheck-fail-on-error:
+        description: Exit with 1 when at least one error was reported.
+        type: boolean
+        default: true
+        required: false
 
 jobs:
-  docs-checks:
-    uses: canonical/operator-workflows/.github/workflows/docs.yaml@main
-    secrets: inherit
-    with:
-      vale-files: './**/*.md'
-      linkcheck-files: './**/*.md'
+  vale:
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v5.0.0
+
+      - name: Run Vale Linter
+        uses: errata-ai/vale-action@v2.1.1
+        with:
+          files: './**/*.md'
+          fail_on_error: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  linkcheck:
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v5.0.0
+
+      - name: Check certificates
+        run: |
+          sudo apt-get install ca-certificates
+          sudo update-ca-certificates -f
+
+      - name: Link Checker
+        id: lychee
+        uses: lycheeverse/lychee-action@v2.6.1
+        with:
+          fail: true
+          args: --verbose --no-progress './**/*.md'
