--- a/http-proxy-configurator-operator/tox.ini
+++ b/http-proxy-configurator-operator/tox.ini
@@ -74,6 +74,7 @@ description = Run unit tests
 deps =
     coverage[toml]
     pytest
+    ops[testing]
     -r{toxinidir}/requirements.txt
 commands =
     coverage run --source={[vars]src_path} \
