--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,7 +8,7 @@ jobs:
     name: Charm Unit Tests
     strategy:
       matrix:
-        charm: [squid-forward-proxy, http-proxy-policy]
+        charm: [squid-forward-proxy, http-proxy-policy, http-proxy-configurator]
     uses: canonical/operator-workflows/.github/workflows/test.yaml@main
     secrets: inherit
     with:
@@ -18,7 +18,7 @@ jobs:
     name: Charm Integration Tests
     strategy:
       matrix:
-        charm: [ squid-forward-proxy, http-proxy-policy ]
+        charm: [ squid-forward-proxy, http-proxy-policy, http-proxy-configurator]
     uses: canonical/operator-workflows/.github/workflows/integration_test.yaml@main
     secrets: inherit
     with:
