--- a/http-proxy-configurator-operator/tox.ini
+++ b/http-proxy-configurator-operator/tox.ini
@@ -103,8 +103,9 @@ description = Run integration tests
 deps =
     juju==3.6.*
     pytest
-    pytest-asyncio
-    pytest-operator
+    pytest-jubilant==0.7.1
+    jubilant==1.1.1
+    requests
     -r{toxinidir}/requirements.txt
 commands =
     pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs}
