--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,7 +8,7 @@ jobs:
     name: Charm Unit Tests
     strategy:
       matrix:
-        charm: [squid-forward-proxy, http-proxy-policy, http-proxy-configurator]
+        charm: [squid-forward-proxy, http-proxy-policy]
     uses: canonical/operator-workflows/.github/workflows/test.yaml@main
     secrets: inherit
     with:
@@ -39,7 +39,14 @@ jobs:
         run: |
           pip install -r requirements.txt
           python3 ./manage.py test --settings=http_proxy_policy.test_settings
-
+  http-proxy-configurator:
+    name: Charm Unit Tests
+    uses: canonical/operator-workflows/.github/workflows/test.yaml@main
+    secrets: inherit
+    with:
+      self-hosted-runner: false
+      python-version: 3.12
+      working-directory: ./http-proxy-configurator-operator
   build-snap:
     name: Build Snap
     runs-on: ubuntu-latest
