fix action name

--- a/http-proxy-configurator-operator/charmcraft.yaml
+++ b/http-proxy-configurator-operator/charmcraft.yaml
@@ -52,7 +52,7 @@ config:
         provided by the Juju integration binding information.
 
 actions:
-  get_proxies:
+  get-proxies:
       description: |
         Get HTTP and HTTPS proxy values from the provider. 
         Returns None if proxy is unavailable.
