add adapter mode

--- a/http-proxy-configurator-operator/charmcraft.yaml
+++ b/http-proxy-configurator-operator/charmcraft.yaml
@@ -35,6 +35,11 @@ requires:
     interface: http_proxy
     limit: 1
 
+provides:
+  http-proxy-backend:
+    interface: http_proxy
+    limit: 1
+
 config:
   options:
     http-proxy-domains:
