--- a/http-proxy-configurator-operator/tox.ini
+++ b/http-proxy-configurator-operator/tox.ini
@@ -32,6 +32,7 @@ commands =
     black {[vars]all_path}
 
 [testenv:lint]
+basepython = python312
 description = Check code against coding style standards
 deps =
     black
@@ -71,6 +72,7 @@ commands =
     pylint {[vars]all_path}
 
 [testenv:unit]
+basepython = python312
 description = Run unit tests
 deps =
     coverage[toml]
