--- a/http-proxy-configurator-operator/tox.ini
+++ b/http-proxy-configurator-operator/tox.ini
@@ -102,6 +102,8 @@ commands =
 [testenv:integration]
 description = Run integration tests
 deps =
+    allure-pytest>=2.8.18
+    git+https://github.com/canonical/data-platform-workflows@v24.0.0\#subdirectory=python/pytest_plugins/allure_pytest_collection_report
     juju==3.6.*
     pytest
     pytest-jubilant==0.7.1
