fix vale-files in docs.yaml

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -10,7 +10,7 @@ jobs:
     uses: canonical/operator-workflows/.github/workflows/docs.yaml@main
     secrets: inherit
     with:
-      vale-files: './**/*.md'
+      vale-files: '["./**/*.md"]'
       linkcheck-files: './**/*.md'
       linkcheck-fail-on-error: false
 
